package com.notifications.notification;

public enum NotificationType {
    INFORMATION,
    NOTICE,
    SUCCESS,
    WARNING,
    ERROR,
    CUSTOM
}
