@startuml

title __NOTIFICATION's Class Diagram__\n

  namespace com.notifications.notification {
    enum NotificationType {
      CUSTOM
      ERROR
      INFORMATION
      NOTICE
      SUCCESS
      WARNING
    }
  }
  

  namespace com.notifications.notification {
    class com.notifications.notification.TrayNotification {
        - imageIcon : ImageView
        - lblClose : Label
        - lblMessage : Label
        - lblTitle : Label
        - onDismissedCallBack : EventHandler<ActionEvent>
        - onShownCallback : EventHandler<ActionEvent>
        - rectangleColor : Rectangle
        - rootNode : AnchorPane
        + TrayNotification()
        + TrayNotification()
        + TrayNotification()
        + dismiss()
        + getAnimationType()
        + getImage()
        + getMessage()
        + getNotificationType()
        + getRectangleFill()
        + getTitle()
        + getTrayIcon()
        + isTrayShowing()
        + setAnimationType()
        + setImage()
        + setMessage()
        + setNotificationType()
        + setOnDismiss()
        + setOnShown()
        + setRectangleFill()
        + setTitle()
        + setTray()
        + setTray()
        + setTrayIcon()
        + showAndDismiss()
        + showAndWait()
        - initAnimations()
        - initStage()
        - initTrayNotification()
        - onDismissed()
        - onShown()
    }
  }
  

  com.notifications.notification.TrayNotification o-- com.notifications.animations.AnimationProvider : animationProvider
  com.notifications.notification.TrayNotification o-- com.notifications.animations.AnimationType : animationType
  com.notifications.notification.TrayNotification o-- com.notifications.animations.TrayAnimation : animator
  com.notifications.notification.TrayNotification o-- com.notifications.notification.NotificationType : notificationType
  com.notifications.notification.TrayNotification o-- com.notifications.models.CustomStage : stage


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
